[package]
name = "l0-orders-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = {version="1.0.209", features=["derive"]}
serde_json = "1.0.127"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio-postgres = { version = "0.7.11", features= ["with-uuid-1","with-chrono-0_4"] }
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.17", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
thiserror = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }

